--- a/index.html
+++ b/index.html
@@ -1,21 +1,94 @@
-i<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SVG Example</title>
+    <title>Curriculum Vitae - Obed Murillo</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        header {
+            text-align: center;
+            background-color: #f2f2f2;
+            padding: 20px;
+        }
+        section {
+            margin: 20px;
+        }
+        h2 {
+            color: #333;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
 
-    <svg width="200" height="150" xmlns="http://www.w3.org/2000/svg">
+    <header>
+        <h1>Obed Murillo</h1>
+        <p>Ingeniero</p>
+    </header>
 
-        <!-- Representación de una montaña -->
-        <polygon points="10,130 100,10 190,130" fill="brown" />
+    <section>
+        <h2>Información de Contacto</h2>
+        <ul>
+            <li><strong>Dirección:</strong> Calle Inventada #123, Ciudad Imaginaria</li>
+            <li><strong>Teléfono:</strong> (123) 456-7890</li>
+            <li><strong>Correo Electrónico:</strong> obed.murillo@email.com</li>
+            <li><strong>LinkedIn:</strong> linkedin.com/in/obedmurillo</li>
+        </ul>
+    </section>
 
-        <!-- Representación del sol -->
-        <circle cx="180" cy="20" r="15" fill="yellow" />
+    <section>
+        <h2>Resumen Profesional</h2>
+        <p>Soy un ingeniero apasionado por la innovación y la resolución de problemas. Con una sólida formación en ingeniería y habilidades en desarrollo de proyectos, estoy comprometido con la excelencia y el trabajo en equipo.</p>
+    </section>
 
-    </svg>
+    <section>
+        <h2>Educación</h2>
+        <ul>
+            <li><strong>Titulo Universitario en Ingeniería:</strong> Universidad Imaginaria, Ciudad Imaginaria, Año de Graduación</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Experiencia Laboral</h2>
+        <ul>
+            <li>
+                <strong>Ingeniero de Proyectos</strong><br>
+                Empresa Innovadora, Ciudad Creativa<br>
+                Fechas: Mes/Año - Mes/Año<br>
+                Descripción breve de las responsabilidades y logros.
+            </li>
+            <!-- Puedes agregar más experiencias laborales si es necesario -->
+        </ul>
+    </section>
+
+    <section>
+        <h2>Habilidades</h2>
+        <ul>
+            <li>Ingeniería de Proyectos</li>
+            <li>Análisis de Datos</li>
+            <li>Resolución de Problemas</li>
+            <li>Trabajo en Equipo</li>
+            <!-- Agrega más habilidades según sea necesario -->
+        </ul>
+    </section>
+
+    <section>
+        <h2>Idiomas</h2>
+        <ul>
+            <li>Español (Nativo)</li>
+            <li>Inglés (Intermedio)</li>
+            <!-- Agrega más idiomas si es necesario -->
+        </ul>
+    </section>
 
 </body>
 </html>
